// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Dropdown /> only renders trigger on mount 1`] = `
<DocumentFragment>
  .c0 {
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
  display: inline-block;
  outline: none;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  display: inline-block;
  cursor: pointer;
  text-transform: capitalize;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-family: inherit;
  font-weight: bold;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border-radius: 8px;
  pointer-events: auto;
  width: auto;
  border: 1px solid transparent;
  -webkit-transition: 175ms;
  transition: 175ms;
  white-space: nowrap;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: #226EFF;
  color: #FFFFFF;
  font-size: 16px;
  height: 40px;
  padding: 0 16px;
}

.c1[disabled] {
  pointer-events: none;
  opacity: 0.75;
}

.c1:hover {
  background-color: #4D89FF;
}

.c1:active {
  background-color: #0958F3;
}

.c1:disabled {
  background-color: #CADCFF;
}

<div
    class="re-dropdown-trigger c0"
    tabindex="-1"
  >
    <button
      aria-expanded="false"
      aria-haspopup="true"
      class="re-button re-button-primary c1"
      role="button"
      style="cursor: pointer;"
      tabindex="0"
    >
      <div
        class="re-box re-flex c2"
      >
        Trigger
      </div>
    </button>
  </div>
</DocumentFragment>
`;

exports[`<Dropdown /> opens menu with focus when trigger is clicked 1`] = `
<DocumentFragment>
  .c0 {
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
  display: inline-block;
  outline: none;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  display: inline-block;
  cursor: pointer;
  text-transform: capitalize;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-family: inherit;
  font-weight: bold;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border-radius: 8px;
  pointer-events: auto;
  width: auto;
  border: 1px solid transparent;
  -webkit-transition: 175ms;
  transition: 175ms;
  white-space: nowrap;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: #226EFF;
  color: #FFFFFF;
  font-size: 16px;
  height: 40px;
  padding: 0 16px;
}

.c1[disabled] {
  pointer-events: none;
  opacity: 0.75;
}

.c1:hover {
  background-color: #4D89FF;
}

.c1:active {
  background-color: #0958F3;
}

.c1:disabled {
  background-color: #CADCFF;
}

<div
    class="re-dropdown-trigger c0"
    tabindex="-1"
  >
    <button
      aria-expanded="true"
      aria-haspopup="true"
      class="re-button re-button-primary c1"
      role="button"
      style="cursor: pointer;"
      tabindex="0"
    >
      <div
        class="re-box re-flex c2"
      >
        Trigger
      </div>
    </button>
  </div>
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="0"
  />
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="1"
  />
  .c0 {
  z-index: 10;
  background: white;
  border-radius: 8px;
  border: 1px solid #F4F4F4;
  outline: none;
  box-shadow: 0 0 3px 0 rgba(178,194,212,0.3);
  width: auto;
  opacity: 0.75;
  -webkit-transform: scale(0.75);
  -ms-transform: scale(0.75);
  transform: scale(0.75);
  -webkit-transform-origin: 0 0;
  -ms-transform-origin: 0 0;
  transform-origin: 0 0;
  -webkit-animation: gPsOjp 225ms cubic-bezier(0.25,0.1,0.17,1.2) forwards;
  animation: gPsOjp 225ms cubic-bezier(0.25,0.1,0.17,1.2) forwards;
}

.c1 {
  padding: 0.75rem 1rem 0;
}

.c2 {
  padding: 0 0 0.25rem;
  border-bottom: 2px solid #E8E9EA;
}

.c3 {
  padding: 1rem;
}

.c4 {
  display: block;
  width: calc(100% + 2rem);
  opacity: 1;
  pointer-events: initial;
  -webkit-user-select: initial;
  -moz-user-select: initial;
  -ms-user-select: initial;
  user-select: initial;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: inherit;
  cursor: pointer;
  margin: 0 calc(-1rem);
  padding: 0.25rem 1rem;
  -webkit-transition: 125ms background;
  transition: 125ms background;
  outline: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: 0;
  font: inherit;
  text-align: left;
}

.c4 + .c6 {
  margin-top: 1rem;
}

.c4:hover,
.c4:focus {
  color: inherit;
  background: #F8F8F9;
}

.c5 {
  background: #F8F8F9;
  padding: 0.75rem 1rem;
  border-radius: 0 0 8px 8px;
}

<div
    data-focus-lock-disabled="false"
  >
    <div
      class="re-dropdown-menu c0"
      data-testid="dropdown-menu"
      style="position: absolute; top: 0px; left: 0px; opacity: 0; pointer-events: none;"
      tabindex="0"
      width="auto"
    >
      <header
        class="re-dropdown-header c1"
      >
        <div
          class="re-dropdown-header-inner c2"
        >
          Header
        </div>
      </header>
      <div
        class="re-box re-dropdown-body c3"
      >
        <div
          class="re-box re-dropdown-item c4"
          data-testid="item-one"
          role="button"
          tabindex="0"
        >
          One
        </div>
        <div
          class="re-box re-dropdown-item c4"
          data-testid="item-two"
          role="button"
          tabindex="0"
        >
          Two
        </div>
      </div>
      <footer
        class="re-box re-dropdown-footer c5"
      >
        Footer
      </footer>
    </div>
  </div>
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="0"
  />
</DocumentFragment>
`;
